--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     --color-primary: #4D41C0;
     --white: #fff;
     --text-light-gray: #aaa;
-
+    --star-yellow: #FFBB3A;
 }
 
 * {
@@ -85,7 +85,7 @@ a, a:hover {
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    min-height: 150px;
+    height: 220px;
 }
 
 .dsmovie-card-description h3 {
@@ -93,6 +93,29 @@ a, a:hover {
     font-weight: 700;
     margin-bottom: 25px;
     text-align: center;
+}
+
+.dsmovie-card-description-boton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-boton {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+}
+
+.dsmovie-card-description-boton p {
+    font-size: 12px;
+    width: 400;
+    color: var(--text-light-gray);
+    margin-bottom: 10px;
+}
+
+.dsmovie-card-description-boton img {
+    width: 22px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
